--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,31 @@
+
+
+
 plugins {
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
+
 }
+
 
 group = 'com.danielsolawa'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+//    implementation group: 'org.springframework.data', name: 'spring-data-mongodb', version: '3.1.7'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.2'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
